examples/test/testpolicy286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy286
  namespace: namespace461
spec:
  podSelector:
    matchLabels:
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value21
          key40: value44
      podSelector:
        matchLabels:
          key17: value19
          key35: value0
          key41: value19
